--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 resolver = "2"
-members = ["crates/formula-model", "crates/xlsx-diff"]
+members = [
+  "crates/formula-engine",
+  "crates/formula-format",
+  "crates/formula-model",
+  "crates/xlsx-diff",
+]
