--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rayon = "1.10"
+thiserror = "2.0"
 
 [dev-dependencies]
+pretty_assertions = "1.4"
