--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -2,6 +2,7 @@
 name = "formula-engine"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
@@ -16,3 +17,14 @@ serde_json = "1.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4"
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "perf_bench"
+path = "src/bin/perf_bench.rs"
+
+[[bench]]
+name = "engine"
+harness = false
