feat: add initial Power Pivot data model + DAX subset engine
- Introduce a minimal in-memory data model (tables, relationships, measures, calculated columns)
- Implement a small DAX parser/evaluator with CALCULATE, FILTER, SUMX/AVERAGEX, RELATED and RELATEDTABLE
- Propagate filter context across one-to-many relationships and optionally enforce referential integrity
- Add unit tests covering relationship navigation, context propagation, and measure evaluation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "crates/formula-dax",
     "crates/formula-engine",
     "crates/formula-format",
     "crates/formula-model",
