--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+formula-model = { path = "../formula-model" }
+rstar = "0.12"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
