feat: add SQLite/Yjs integration for versioning
- Add SQLiteVersionStore using node:sqlite for storage-backed version history

- Add Yjs spreadsheet doc adapter + snapshot->sheet-state helpers for diff/restore

- Add integration test exercising checkpoint->move->diff->restore with Yjs + SQLite

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "formula",
   "private": true,
   "type": "module",
+  "dependencies": {
+    "yjs": "^13.6.27"
+  },
   "scripts": {
-    "test": "node --test"
+    "test": "node --no-warnings --test"
   },
   "engines": {
     "node": ">=18"
