--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
   "dependencies": {
     "yjs": "^13.6.27"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "test": "node --no-warnings --test"
+    "test": "vitest run",
+    "test:node": "node --no-warnings --test",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.4",
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.7"
   }
 }
