--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,12 @@ node_modules/
 dist/
 **/dist/
 coverage/
+.turbo/
+.vite/
 npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
 *.log
-
 .DS_Store
 **/.DS_Store
 
