--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ members = [
     "crates/formula-engine",
     "crates/formula-format",
     "crates/formula-model",
+    "crates/formula-vba",
+    "crates/formula-xlsx",
     "crates/xlsx-diff",
 ]
