feat: add web target, platform ADRs, and repo governance
- Add ADRs for desktop-first (Tauri) + optional web strategy and engine execution model
- Introduce Vite/React web app using Worker-based engine client and shared grid package
- Add Apache-2.0 license, contribution/security docs, GitHub templates, and CI web build

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "dev": "pnpm --dir packages/grid dev",
+    "dev:web": "pnpm --filter @formula/web dev",
+    "build:web": "pnpm --filter @formula/web build",
     "dev:desktop": "pnpm -C apps/desktop dev",
     "build:desktop": "pnpm -C apps/desktop build",
     "test": "pnpm test:vitest && pnpm test:node && pnpm -C apps/desktop test",
