--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@formula/grid",
+  "name": "@formula/web",
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "sideEffects": false,
-  "exports": {
-    ".": "./src/index.ts"
-  },
   "scripts": {
     "dev": "vite",
-    "test": "vitest run"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@formula/engine": "workspace:*",
+    "@formula/grid": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -19,8 +18,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vitest": "^1.6.0"
+    "typescript": "^5.8.2",
+    "vite": "^5.2.11"
   }
 }
