--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "crates/formula-format",
   "crates/formula-io",
   "crates/formula-model",
+  "crates/formula-storage",
   "crates/formula-vba",
   "crates/formula-xlsb",
   "crates/formula-xlsx",
