feat(desktop): Excel-like selection, navigation, and in-place editing
- Implement selection model (cell/range/multi/row/col/all) with anchor/active semantics

- Add keyboard navigation incl. Tab/Enter, Ctrl+Arrow, Ctrl+Home/End

- Add DOM overlay cell editor (F2) with Excel commit/cancel keys

- Render selection highlights/borders/active cell + fill handle on canvas

- Add Vitest unit tests + Playwright E2E coverage

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -3,6 +3,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "node --test"
+    "dev": "vite --port 4173 --strictPort",
+    "build": "vite build",
+    "preview": "vite preview --port 4173 --strictPort",
+    "test:node": "node --test",
+    "test": "vitest run",
+    "test:e2e": "playwright test"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^22.10.1",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7",
+    "vitest": "^2.1.8"
   }
 }
