--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,19 @@ node_modules/
 **/node_modules/
 dist/
 **/dist/
+
+build/
+**/build/
+
+.vite/
+**/.vite/
+
+playwright-report/
+**/playwright-report/
+
+test-results/
+**/test-results/
+
 coverage/
 .turbo/
 .vite/
