--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "scripts": {
     "dev": "pnpm --dir packages/grid dev",
-    "test": "vitest run && node scripts/run-node-tests.mjs",
+    "dev:desktop": "pnpm -C apps/desktop dev",
+    "build:desktop": "pnpm -C apps/desktop build",
+    "test": "pnpm test:vitest && pnpm test:node && pnpm -C apps/desktop test",
     "test:vitest": "vitest run",
     "test:node": "node scripts/run-node-tests.mjs",
+    "test:e2e": "pnpm -C apps/desktop test:e2e",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "engines": {
