--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -10,6 +10,7 @@ rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
 formula-format = { path = "../formula-format" }
+serde_json = "1.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4"
