--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "lib": ["ES2022", "DOM"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,6 +18,7 @@
     "packages/ai-tools/**/*.ts",
     "packages/ai-audit/**/*.ts",
     "packages/ai-audit/**/*.d.ts",
+    "apps/desktop/src/engine/worker/**/*.ts",
     "vitest.config.ts"
   ]
 }
