--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
 formula-model = { path = "../formula-model" }
 rstar = "0.12"
+inventory = "0.3"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
