feat: add conditional formatting pipeline (xlsx parse, model, eval, render)
- Added formula-model conditional formatting types + evaluator with visible-range caching/invalidation\n- Added formula-xlsx parsers for Office 2007 <conditionalFormatting> and Excel 2010+ x14 extensions (with raw XML preservation + merge)\n- Added styles dxf parsing and two fixture workbooks with round-trip + snapshot tests\n- Added a minimal canvas-style renderer + deterministic draw-call test in apps/desktop

--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -6,8 +6,10 @@ license = "MIT OR Apache-2.0"
 description = "Core in-memory data model for Formula spreadsheets (workbooks/sheets/cells/styles)."
 
 [dependencies]
+regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
+thiserror = "2.0"
 
 [dev-dependencies]
 serde_json = "1.0"
