--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 formula-model = { path = "../formula-model" }
 formula-vba = { path = "../formula-vba" }
 quick-xml = "0.37"
+roxmltree = "0.20"
 thiserror = "1"
 zip = { version = "2.1", default-features = false, features = ["deflate"] }
 
@@ -14,4 +15,5 @@ zip = { version = "2.1", default-features = false, features = ["deflate"] }
 base64 = "0.22"
 cfb = "0.10"
 pretty_assertions = "1"
+insta = "1.46"
 tempfile = "3.10"
