--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -9,6 +9,7 @@ rstar = "0.12"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
+formula-format = { path = "../formula-format" }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
