feat: add Excel-like solver engine (Simplex/GRG/Evolutionary) with UI stubs
- Added Rust solver module with SolverModel recalc integration, objective/constraint support, and three methods (Simplex, GRG nonlinear, Evolutionary GA)\n- Implemented linear coefficient inference + 2-phase simplex with branch-and-bound for integer/binary vars\n- Implemented GRG-style penalty/line-search solver with equality repair and an evolutionary solver for non-smooth problems\n- Added unit tests for a linear LP, nonlinear constrained minimization, and a nonsmooth integer case\n- Added desktop panel stubs for configuring/running Solver with progress + keep/restore UX

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 /target/
 **/target/
+Cargo.lock
+
+apps/desktop/.turbo/
+
+# Rust editor backups / swap files
 **/*.rs.bk
 **/*.swp
 **/*.swo
 
-# Node
+# Node / web
 node_modules/
 **/node_modules/
 dist/
@@ -28,5 +33,6 @@ pnpm-debug.log*
 scratchpad.md
 handoff.md
 
+# Python
 __pycache__/
 *.pyc
