feat: bootstrap API + sync backend foundation
- Add Fastify API with Postgres schema/migrations for users, orgs, docs, sessions, audit, retention\n- Implement email/password auth + session cookies, MFA(TOTP) scaffolding, org settings, doc RBAC + range permissions\n- Issue short-lived JWT collaboration tokens and add token-validating WebSocket sync gateway\n- Provide docker-compose local stack, backend docs, and vitest e2e smoke tests

--- a/.gitignore
+++ b/.gitignore
@@ -4,24 +4,29 @@
 **/*.swp
 **/*.swo
 
+# Node
 node_modules/
 **/node_modules/
-
 dist/
 **/dist/
-
 coverage/
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+*.log
+
 .DS_Store
+**/.DS_Store
 
 # Local secrets
 .env
 .env.*
+**/.env
+**/.env.*
 
 # Local-only agent files (never commit)
 scratchpad.md
 handoff.md
-
-*.log
 
 __pycache__/
 *.pyc
