feat: add Excel-style sort/filter engine with XLSX AutoFilter IO
- Implement multi-key stable range sorting with header detection and type coercion
- Implement AutoFilter-style criteria evaluation (text/numeric/date, blanks) and per-view filter state
- Add XLSX autoFilter parse/write helpers for non-table and table ranges (filters/customFilters/dynamicFilter)
- Add basic desktop UI stubs (filter dropdown + multi-key sort dialog)

--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 formula-model = { path = "../formula-model" }
 rstar = "0.12"
 rayon = "1.10"
