feat(desktop): add backend state, IPC types, and XLSX I/O
- Add AppState with in-memory workbook model, dirty tracking, and undo/redo\n- Implement minimal calc engine (A1 refs + basic arithmetic) with dependency graph\n- Add XLSX read/write (calamine + rust_xlsxwriter) and stable IPC serde types\n- Provide Tauri commands + window events (feature-gated to avoid GTK/WebKit deps in CI)\n- Add unit tests for state logic and XLSX round-trip

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "crates/formula-dax",
-    "crates/formula-engine",
-    "crates/formula-format",
-    "crates/formula-model",
-    "crates/formula-vba",
-    "crates/formula-xlsx",
-    "crates/xlsx-diff",
+  "apps/desktop/src-tauri",
+  "crates/formula-dax",
+  "crates/formula-engine",
+  "crates/formula-format",
+  "crates/formula-model",
+  "crates/formula-vba",
+  "crates/formula-xlsx",
+  "crates/xlsx-diff",
 ]
