--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -10,6 +10,9 @@
     "test": "vitest run",
     "test:e2e": "playwright test"
   },
+  "dependencies": {
+    "@formula/collab-comments": "workspace:*"
+  },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/node": "^22.10.1",
