test: round-trip fixtures via formula-xlsx package writer
- Use formula-xlsx (OPC package load/save) in xlsx-diff fixture harness
- Keep xlsx-diff CLI as pure diff tool while CI exercises real load→save path

--- a/crates/xlsx-diff/Cargo.toml
+++ b/crates/xlsx-diff/Cargo.toml
@@ -12,5 +12,5 @@ walkdir = "2.5"
 zip = { version = "2.1", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
+formula-xlsx = { path = "../formula-xlsx" }
 pretty_assertions = "1.4"
-
