--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ members = [
   "crates/formula-dax",
   "crates/formula-engine",
   "crates/formula-format",
+  "crates/formula-io",
   "crates/formula-model",
   "crates/formula-vba",
+  "crates/formula-xlsb",
   "crates/formula-xlsx",
   "crates/xlsx-diff",
 ]
