feat: add Yjs version compare helper and unify JS/TS test runners
- Expose VersionManager.getVersion plus Yjs helpers to diff a stored version against current state

- Fix package.json workspaces duplication and run both vitest and node:test via npm test

- Add script to run only .test.js files so node:test skips vitest TypeScript suites

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   ],
   "scripts": {
     "dev": "pnpm --dir packages/grid dev",
-    "test": "vitest run",
-    "test:node": "node --no-warnings --test",
+    "test": "vitest run && node scripts/run-node-tests.mjs",
+    "test:vitest": "vitest run",
+    "test:node": "node scripts/run-node-tests.mjs",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "engines": {
