feat: import legacy .xls workbooks via calamine
- Add formula-model workbook representation with origin metadata
- Implement formula-xls BIFF importer (values, formulas as text, merged ranges)
- Default legacy imports to save as .xlsx and expose origin for UI warnings
- Add .xls fixture + integration test; include .xls in desktop open filters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "crates/formula-storage",
   "crates/formula-vba",
   "crates/formula-vba-runtime",
+  "crates/formula-xls",
   "crates/formula-xlsb",
   "crates/formula-xlsx",
   "crates/xlsx-diff",
