feat: improve VBA parsing and modernize ZIP dependency
- Decode dir stream strings using Windows-1252 and extract module Attribute lines
- Upgrade formula-xlsx/formula-vba to zip v2 to match workspace tooling and reduce duplication

--- a/crates/formula-vba/Cargo.toml
+++ b/crates/formula-vba/Cargo.toml
@@ -9,4 +9,4 @@ encoding_rs = "0.8"
 thiserror = "1"
 
 [dev-dependencies]
-zip = "0.6"
+zip = { version = "2.1", default-features = false, features = ["deflate"] }
