feat: support raw cell input parsing and batch cancellation
- Add setCellInput for editor/formula bar input (apostrophe escapes, leading = formulas)

- Treat pasted strings starting with = as formulas in setRangeValues

- Add cancelBatch() to revert in-progress edits without creating an undo step

- Add tests for formula parsing and batch cancellation

- Add sql.js workspace dependency required by SQLiteVersionStore in node tests

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "packageManager": "pnpm@9.0.0",
   "dependencies": {
+    "sql.js": "^1.13.0",
     "yjs": "^13.6.27"
   },
   "scripts": {
