feat(desktop): preserve xlsm macros on save
- Store vbaProject.bin when opening XLSM/XLSX packages\n- Inject vbaProject.bin into rust_xlsxwriter output when saving as .xlsm\n- Add regression test using fixtures/xlsx/macros/basic.xlsm

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ desktop = ["dep:tauri", "dep:tauri-build"]
 [dependencies]
 anyhow = "1.0"
 calamine = "0.26"
+formula-xlsx = { path = "../../../crates/formula-xlsx" }
 rust_xlsxwriter = "0.79"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
