feat: add columnar engine with streaming import and range paging
- Add new `formula-columnar` crate implementing VertiPaq-style columnar storage
  (dictionary + value encoding + optional RLE), column stats, scan APIs, and an
  LRU cache for decoded chunks.
- Integrate columnar tables into `formula-model::Worksheet` as a runtime backing
  store with safe out-of-bounds reads and a virtualization-friendly
  `get_range_batch` API.
- Add streaming CSV import that infers column types and builds a columnar table
  without materializing a full cell grid.
- Update the Tauri backend sheet model to page viewport ranges from columnar
  storage and fix zip 2.x `FileOptions` type inference in `formula-xlsx`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
+resolver = "2"
 members = [
   "apps/desktop/src-tauri",
+  "crates/formula-columnar",
   "crates/formula-dax",
   "crates/formula-engine",
   "crates/formula-excel-oracle",
@@ -17,4 +19,3 @@ members = [
   "crates/formula-core",
   "crates/formula-wasm",
 ]
-resolver = "2"
