--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT OR Apache-2.0"
 description = "Core in-memory data model for Formula spreadsheets (workbooks/sheets/cells/styles)."
 
 [dependencies]
+formula-columnar = { path = "../formula-columnar" }
 regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
