feat: trigger onView activation events via viewActivated event

--- a/extensions/sample-hello/package.json
+++ b/extensions/sample-hello/package.json
@@ -13,6 +13,7 @@
     "onCommand:sampleHello.sumSelection",
     "onCommand:sampleHello.openPanel",
     "onCommand:sampleHello.fetchText",
+    "onView:sampleHello.panel",
     "onCustomFunction:SAMPLEHELLO_DOUBLE"
   ],
   "contributes": {
