--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "fake-indexeddb": "^6.2.5",
     "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   }
