feat: add deduped cell styles, XLSX styles.xml mapping, and formatting UI
- Expand formula-model Style/StyleTable to cover fonts, fills, borders, alignment, protection, and number formats

- Desktop DocumentController now stores styleId references and preserves format objects for version snapshots

- Add formatting toolbar helpers, Ctrl+1 shortcut, and CSS style renderer

- Implement formula-xlsx StylesPart (stable styles.xml indices + append-only dedup) and WorkbookPackage roundtrip

- Add fixtures and tests for style dedup + XLSX roundtrip

--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -23,3 +23,4 @@ insta = "1.46"
 rust_xlsxwriter = "0.64"
 formula-engine = { path = "../formula-engine" }
 tempfile = "3.10"
+xlsx-diff = { path = "../xlsx-diff" }
