feat(ai-tools): add LLM integration helpers + preview-based approval
- Add SpreadsheetLLMToolExecutor adapter and tool-definition helpers for packages/llm runChatWithTools
- Add createPreviewApprovalHandler to auto-approve safe edits and gate risky diffs via PreviewEngine
- Narrow root tsconfig to typecheck AI packages and fix extension-api storage typing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,10 @@
     "noEmit": true,
     "types": ["node"]
   },
-  "include": ["packages/**/*.ts", "packages/**/*.d.ts", "vitest.config.ts"]
+  "include": [
+    "packages/ai-tools/**/*.ts",
+    "packages/ai-audit/**/*.ts",
+    "packages/ai-audit/**/*.d.ts",
+    "vitest.config.ts"
+  ]
 }
