--- a/packages/ai-completion/package.json
+++ b/packages/ai-completion/package.json
@@ -3,5 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts"
 }
