--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -2,6 +2,8 @@
 name = "formula-xlsx"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+description = "XLSX/XLSM import/export and package preservation utilities for Formula."
 
 [dependencies]
 formula-engine = { path = "../formula-engine" }
