--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -10,6 +10,9 @@ regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
 thiserror = "2.0"
+chrono = "0.4"
+ordered-float = "4"
+uuid = { version = "1", features = ["v4"] }
 
 [dev-dependencies]
 serde_json = "1.0"
