feat: add workbook RAG embeddings with persistent vector search
- Chunk workbook into tables, named ranges, data regions and formula regions
- Render chunks as schema-first text with sampled rows
- Pluggable embedders (hash/dev, Ollama, OpenAI) and incremental re-indexing via content hashes
- Vector store interface with in-memory + JSON file persistence
- ContextManager retrieves topK chunks with token budgeting + basic DLP redaction
- Added unit + integration tests ("revenue by region")

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,14 @@ services/sync-server/.sync-server-data/
 scratchpad.md
 handoff.md
 
+# App artifacts
+.formula/
+
+# Test artifacts
+**/.tmp/
+**/.tmp-*/
+**/.tmp-*
+
 # Python
 /.venv
 __pycache__/
