--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ desktop = ["dep:tauri", "dep:tauri-build"]
 
 [dependencies]
 anyhow = "1.0"
+base64 = "0.22"
 calamine = "0.26"
 formula-engine = { path = "../../../crates/formula-engine" }
 formula-xlsx = { path = "../../../crates/formula-xlsx" }
