--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^22.13.4",
     "fake-indexeddb": "^6.2.5",
+    "jsdom": "^24.0.0",
     "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   }
