feat: wire comments into desktop app, persistence, and versioning
- Add local comments panel + indicator + hover tooltip in desktop grid demo\n- Provide Yjs doc localStorage persistence helpers and tests\n- Include comments root in Yjs versioning adapter snapshots\n- Fix zip FileOptions type regression in xlsx print writer

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,7 +11,8 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@formula/collab-comments": "workspace:*"
+    "@formula/collab-comments": "workspace:*",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
