feat: implement signed extension marketplace ecosystem
- Add marketplace backend with publisher auth, metadata store, search, and signed downloads
- Add extension publisher CLI to validate manifests, package, sign (Ed25519), and publish
- Add desktop marketplace client installer with mandatory signature verification + update checking
- Add integration test: publish sample extension, install, run command via extension host, then update

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,12 @@ __pycache__/
 
 .idea/
 .vscode/
+
+# Marketplace service runtime state
+services/marketplace/data/
+
+# Desktop app runtime state
+apps/desktop/.formula/
+
+# Test runtime artifacts
+.tmp/
