--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dev:web": "pnpm --filter @formula/web dev",
     "build:web": "pnpm --filter @formula/web build",
     "dev:desktop": "pnpm -C apps/desktop dev",
+    "dev:sync": "pnpm -C services/sync-server dev",
     "build:desktop": "pnpm -C apps/desktop build",
-    "test": "pnpm test:vitest && pnpm test:node && pnpm -C apps/desktop test",
+    "test": "pnpm test:vitest && pnpm test:node && pnpm test:sync && pnpm -C apps/desktop test",
+    "test:sync": "pnpm -C services/sync-server test",
     "test:vitest": "vitest run",
     "test:node": "node scripts/run-node-tests.mjs",
     "test:e2e": "pnpm -C apps/desktop test:e2e",
