--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@formula/collab-comments": "workspace:*",
+    "@formula/text-layout": "workspace:*",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
