--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/formula-model",
   "crates/formula-storage",
   "crates/formula-vba",
+  "crates/formula-vba-runtime",
   "crates/formula-xlsb",
   "crates/formula-xlsx",
   "crates/xlsx-diff",
