--- a/packages/extension-host/package.json
+++ b/packages/extension-host/package.json
@@ -2,6 +2,8 @@
   "name": "@formula/extension-host",
   "version": "0.0.0",
   "private": true,
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "dependencies": {
+    "@formula/security": "workspace:*"
+  }
 }
-
